--- a/xFunc/StylesForControls.xaml
+++ b/xFunc/StylesForControls.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:views="clr-namespace:xFunc.Views"
+                    xmlns:res="clr-namespace:xFunc.Resources">
     <Style x:Key="listBoxItemStyle" TargetType="{x:Type ListBoxItem}">
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
     </Style>
@@ -36,4 +38,17 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <ContextMenu x:Key="expMenu">
+        <MenuItem Header="{x:Static res:Resource.CopyExpressionMenuItem}">
+            <MenuItem Header="{x:Static res:Resource.ToClipboardMenuItem}" Command="views:MainView.CopyExpToClipCommand" />
+            <MenuItem Header="{x:Static res:Resource.ToInputMenuItem}" Command="views:MainView.CopyExpToInputCommand" />
+        </MenuItem>
+        <MenuItem Header="{x:Static res:Resource.CopyAnswerMenuItem}">
+            <MenuItem Header="{x:Static res:Resource.ToClipboardMenuItem}" Command="views:MainView.CopyAnswerToClipCommand" />
+            <MenuItem Header="{x:Static res:Resource.ToInputMenuItem}" Command="views:MainView.CopyAnswerToInputCommand" />
+        </MenuItem>
+        <Separator />
+        <MenuItem Header="{x:Static res:Resource.DeleteMenuItem}" Command="views:MainView.DeleteExpCommand" />
+    </ContextMenu>
 </ResourceDictionary>
