--- a/xFunc/Views/LogicControl.xaml
+++ b/xFunc/Views/LogicControl.xaml
@@ -1,4 +1,18 @@
-﻿<UserControl x:Class="xFunc.Views.LogicControl"
+﻿<!-- Copyright 2012-2013 Dmitry Kischenko
+
+Licensed under the Apache License, Version 2.0 (the "License"); 
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software 
+distributed under the License is distributed on an "AS IS" BASIS, 
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
+express or implied. 
+See the License for the specific language governing permissions and 
+limitations under the License. -->
+<UserControl x:Class="xFunc.Views.LogicControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:viewModels="clr-namespace:xFunc.ViewModels"
@@ -22,7 +36,7 @@
             <MenuItem Header="{x:Static res:Resource.DeleteMenuItem}" Command="views:LogicControl.DeleteExpCommand" />
         </ContextMenu>
     </UserControl.Resources>
-    
+
     <UserControl.CommandBindings>
         <CommandBinding Command="views:LogicControl.CopyExpToClipCommand" Executed="CopyExpToClip_Execute" CanExecute="Copy_CanExecute" />
         <CommandBinding Command="views:LogicControl.CopyAnswerToClipCommand" Executed="CopyAnswerToClip_Execute" CanExecute="Copy_CanExecute" />
@@ -31,7 +45,7 @@
 
         <CommandBinding Command="views:LogicControl.DeleteExpCommand" Executed="DeleteExp_Execute" CanExecute="DeleteExp_CanExecute" />
     </UserControl.CommandBindings>
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
