--- a/xFunc/Views/VariableView.xaml
+++ b/xFunc/Views/VariableView.xaml
@@ -39,13 +39,7 @@ limitations under the License. -->
                         </DataTemplate>
                     </GridViewColumn.CellTemplate>
                 </GridViewColumn>
-                <GridViewColumn Header="{x:Static res:Resource.VarValueHeader}">
-                    <GridViewColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Path=Value}" TextAlignment="Center" />
-                        </DataTemplate>
-                    </GridViewColumn.CellTemplate>
-                </GridViewColumn>
+                <GridViewColumn Header="{x:Static res:Resource.VarValueHeader}" DisplayMemberBinding="{Binding Path=Value}" />
             </GridView>
         </ListView.View>
     </ListView>
