--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -493,15 +493,27 @@ limitations under the License. -->
 
                         <Button Grid.Row="0" Grid.Column="0" Tag="~" Click="InsertChar_Click">
                             <Rectangle Fill="{StaticResource bit_not}" Width="26" Height="20" />
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.NotToolTip}" />
+                            </Button.ToolTip>
                         </Button>
                         <Button Grid.Row="0" Grid.Column="1" Tag="&amp;" Click="InsertChar_Click">
                             <Rectangle Fill="{StaticResource bit_and}" Width="30" Height="20" />
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.AndToolTip}" />
+                            </Button.ToolTip>
                         </Button>
                         <Button Grid.Row="0" Grid.Column="2" Tag="|" Click="InsertChar_Click">
                             <Rectangle Fill="{StaticResource bit_or}" Width="20" Height="20" />
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.OrToolTip}" />
+                            </Button.ToolTip>
                         </Button>
                         <Button Grid.Row="0" Grid.Column="3" Tag="xor" Click="InsertChar_Click">
                             <Rectangle Fill="{StaticResource bit_xor}" Width="28" Height="20" />
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.XOrToolTip}" />
+                            </Button.ToolTip>
                         </Button>
                     </Grid>
                 </Expander>
@@ -540,15 +552,24 @@ limitations under the License. -->
 
                         <Button Grid.Row="0" Grid.Column="0" Tag=":=" Click="InsertChar_Click">
                             <Rectangle Fill="{StaticResource assign}" Width="12" Height="20" />
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.DefToolTip}" />
+                            </Button.ToolTip>
                         </Button>
                         <Button Grid.Row="0" Grid.Column="1" Tag="undef" Click="InsertFunc_Click">
                             <Rectangle Fill="{StaticResource undef}" Width="46" Height="20" />
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.UndefToolTip}" />
+                            </Button.ToolTip>
                         </Button>
                         <Button Grid.Row="0" Grid.Column="2" Tag="deriv" Click="InsertDoubleArgFunc_Click">
                             <Rectangle Fill="{StaticResource deriv}" Width="20" Height="20" />
                         </Button>
                         <Button Grid.Row="0" Grid.Column="3" Tag="simplify" Click="InsertFunc_Click">
                             <Rectangle Fill="{StaticResource simplify}" Width="48" Height="20" />
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.SimplifyToolTip}" />
+                            </Button.ToolTip>
                         </Button>
 
                         <Button Grid.Row="1" Grid.Column="0" Tag="gcd" Click="InsertDoubleArgFunc_Click">
