--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -39,6 +39,7 @@ limitations under the License. -->
         <CommandBinding Command="views:MainView.ClearCommand" Executed="Clear_Execute" CanExecute="Clear_CanExecute" />
 
         <CommandBinding Command="views:MainView.AboutCommand" Executed="AboutCommand_Execute" />
+        <CommandBinding Command="views:MainView.ExitCommand" Executed="ExitCommand_Execute" />
     </ribbon:RibbonWindow.CommandBindings>
     <ribbon:RibbonWindow.InputBindings>
         <KeyBinding Command="views:MainView.DegreeCommand" Key="D" Modifiers="Control+Alt" />
@@ -46,6 +47,7 @@ limitations under the License. -->
         <KeyBinding Command="views:MainView.GradianCommand" Key="G" Modifiers="Control+Alt" />
 
         <KeyBinding Command="views:MainView.AboutCommand" Key="F1" />
+        <KeyBinding Command="views:MainView.ExitCommand" Key="F4" Modifiers="Alt" />
     </ribbon:RibbonWindow.InputBindings>
 
     <Grid>
@@ -67,6 +69,22 @@ limitations under the License. -->
             <ribbon:Ribbon.ToolBarItems>
                 <ribbon:Button Header="{x:Static res:Resource.AboutButtonHeader}" ToolTip="{x:Static res:Resource.AboutButtonToolTip}" Size="Small" Icon="../Images/Help.png" Command="views:MainView.AboutCommand" />
             </ribbon:Ribbon.ToolBarItems>
+            <ribbon:Ribbon.Menu>
+                <ribbon:Backstage Header="{x:Static res:Resource.FileMenu}" Background="Black">
+                    <ribbon:BackstageTabControl>
+                        <ribbon:Button Header="{x:Static res:Resource.NewMenu}" Icon="..\Images\new.png" />
+                        <ribbon:Button Header="{x:Static res:Resource.OpenMenu}" Icon="..\Images\open.png" />
+                        <ribbon:Button Header="{x:Static res:Resource.SaveMenu}" Icon="..\Images\save.png" />
+                        <ribbon:SeparatorTabItem />
+                        <ribbon:Button Header="{x:Static res:Resource.SettingsMenu}" Icon="..\Images\settings.png" />
+                        <ribbon:Button Header="{x:Static res:Resource.ExitMenu}" Icon="..\Images\exit.png" Command="views:MainView.ExitCommand">
+                            <ribbon:Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.ExitToolTip}" />
+                            </ribbon:Button.ToolTip>
+                        </ribbon:Button>
+                    </ribbon:BackstageTabControl>
+                </ribbon:Backstage>
+            </ribbon:Ribbon.Menu>
             <ribbon:RibbonTabItem Header="{x:Static res:Resource.HomeRibbonTabHeader}" IsSelected="True">
                 <ribbon:RibbonGroupBox Header="{x:Static res:Resource.ClipboardGroupHeader}">
                     <ribbon:Button x:Name="undoButton" Header="{x:Static res:Resource.UndoButtonHeader}" Icon="../Images/Undo.png" LargeIcon="../Images/UndoLarge.png" Command="ApplicationCommands.Undo">
